# sim-evals

./: README.md  finalize_hosted_evidence.py  pyproject.toml  recover_hosted_video.py  run_contact_integrity_smoke.py  run_curriculum.py  run_eval.py  run_eval_lw.py  run_eval_lw_test.py  run_hosted_dsrl.py  run_hosted_eval.py
docker/: Dockerfile  README.md  compose.yml
src/sim_evals/: curriculum.py  dsrl.py  episode_results.py  hosted_droid.py
src/sim_evals/environments/: __init__.py  droid_environment.py  dynamic_manager_based_rl_env.py  lw_environment.py
src/sim_evals/environments/mdp/: __init__.py  rewards.py
src/sim_evals/inference/: abstract_client.py  cybernetics_dreamzero.py  droid_jointpos.py  droid_observation.py  test.py
tests/: test_curriculum.py  test_cybernetics_dreamzero.py  test_dsrl.py  test_hosted_droid.py  test_run_contact_integrity_smoke.py  test_run_hosted_dsrl.py  test_run_hosted_eval.py
