[project]
name = "sim-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pip>=25.0",
  "mediapy>=1.2.4",
  "openpi-client",
  "isaaclab[all,isaacsim]==2.3.0",
  "tyro>=0.9.17",
  "websockets>=16.0",
]

[tool.uv]
override-dependencies = [
  "pywin32==306; sys_platform == 'win32'",
  "websockets>=16.0",
  "flatdict==4.1.0"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = {index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'"}
isaacsim = { index = "isaac" }
real2simeval = { workspace = true }
openpi-client = { git = "https://github.com/Physical-Intelligence/openpi.git", subdirectory = "packages/openpi-client" }

[[tool.uv.index]]
name = "isaac"
url = "https://pypi.nvidia.com"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.basedpyright]
extraPaths = [
    "./.venv/lib/python3.11/site-packages/isaaclab/source/isaaclab/",
    "./.venv/lib/python3.11/site-packages/isaaclab/source/isaaclab_assets/",
    "./.venv/lib/python3.11/site-packages/isaaclab/source/isaaclab_tasks/",
]
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
